src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import "tailwindcss";

@font-face {
    font-family: "Fredoka";
    src: url("/fonts/Fredoka-VariableFont_wdth,wght.ttf") format("truetype");
    font-weight: 300 900;
    font-style: normal;
    font-display: swap;
}

html {
    font-family: "Fredoka", system-ui, sans-serif;
    /*
        overflow rubberband on mobile devices determines the color from the html element
    */
    background-color: rgb(249, 226, 248);
}

:root {
    --bg-accent: rgb(237, 171, 234);
    --bg-accent-transparent: rgb(249, 226, 248);
    --bg-accent-transparenter: rgb(251, 234, 250);
    --accent-secondary: hsl(272, 40%, 50%);
    --accent-secondary-inactive: hsl(272, 22%, 40%);
    --accent-secondary-inactive-hover: hsl(272, 35%, 40%);
    --accent-tetriary: hsl(265, 40%, 50%);
    --accent-tetriary-inactive: hsl(265, 28%, 40%);
    --accent-tetriary-inactive-hover: hsl(265, 35%, 35%);
    --accent: hsl(290, 50%, 60%);
    --accent-inactive: hsl(290, 35%, 45%);
    --accent-inactive-hover: hsl(290, 42%, 40%);
    --accent-old: hsl(303, 36%, 62%);
    --accent-old-inactive: hsl(303, 26%, 45%);
    --accent-old-inactive-hover: hsl(303, 32%, 40%);
    --accent-alternate: hsl(15, 100%, 75%);
    --accent-alternate-inactive: hsl(15, 60%, 50%);
    --accent-alternate-inactive-hover: hsl(15, 75%, 45%);
}

body {
    background-color: rgb(249, 226, 248);
    display: flex;
    flex-direction: column;
    overflow-x: hidden;
}

/*
    cute little background gradient practically copied from buh.moe :oopsie:
*/

main {
    background: radial-gradient(ellipse 110% 60% at 50% 0%, rgb(250, 230, 249) 0px, rgb(252, 242, 252) 35%, white 60%);
    width: 100%;
    padding: 0em 2em;
    display: flex;
    flex-direction: column;
    align-self: center;
    font-size: large;
    flex-grow: 1;
    padding-bottom: 3em;
}

.content {
    padding: 0em 2em;
    max-width: 1200px;
    align-self: center;
}

hr {
    width: 4em;
    align-self: center;
    opacity: 0.1;
    margin: 1em 0em;
    border-width: 2px;
    border-radius: 4px;
}

h1 {
    text-align: center;
    font-size: 3em;
    font-weight: bold;
    color: var(--accent-secondary);
    /* EVIL FUCKED UP SHADOW PLUS OUTLINE HACK DONT ASK */
    text-shadow:
        -3px -3px 0 white,
        3px -3px 0 white,
        -3px 3px 0 white,
        3px 3px 0 white,
        -3px 0 0 white,
        3px 0 0 white,
        0 -3px 0 white,
        0 3px 0 white,
        -3px 6px 0px rgba(0, 0, 0, 0.35);
    flex-shrink: 0;
    transition: transform 50ms;
    user-select: none;
    cursor: pointer;
    width: fit-content;
    align-self: center;
}

@media (max-width: 728px) {
    main {
        background: radial-gradient(ellipse 150% 30vh at 50% 0%, rgb(250, 230, 249) 0px, rgb(252, 242, 252) 35%, white 60%);
        font-size: medium;
    }
    h1 {
        font-size: 2em;
    }
}

@media (hover: hover) {
    h1:hover {
        transform: rotate(-1deg);
    }
    h1:active {
        transform: scale(0.95);
    }

    /*
        This animation pushes the element slightly upwards
        without adjusting the element hitbox, which prevents jitter
        It also accounts for the squish animation on click
    */
    .gallery-link:hover>.gallery-section {
        transform: translateY(-4px);
    }
    .gallery-link:active>.gallery-section {
        transform: scale(0.98) translateY(-4px);
    }
}


.color-accent {
    color: var(--accent);
}

/* Twemoji */
img.emoji {
    height: 1em;
    width: 1em;
    margin: 0 0.05em 0 0.1em;
    vertical-align: -0.1em;
    display: inline-block;
}

.poppins-thin {
    font-family: "Poppins", sans-serif;
    font-weight: 100;
    font-style: normal;
}

.poppins-extralight {
    font-family: "Poppins", sans-serif;
    font-weight: 200;
    font-style: normal;
}

.poppins-light {
    font-family: "Poppins", sans-serif;
    font-weight: 300;
    font-style: normal;
}

.poppins-regular {
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-style: normal;
}

.poppins-medium {
    font-family: "Poppins", sans-serif;
    font-weight: 500;
    font-style: normal;
}

.poppins-semibold {
    font-family: "Poppins", sans-serif;
    font-weight: 600;
    font-style: normal;
}

.poppins-bold {
    font-family: "Poppins", sans-serif;
    font-weight: 700;
    font-style: normal;
}

.poppins-extrabold {
    font-family: "Poppins", sans-serif;
    font-weight: 800;
    font-style: normal;
}

.poppins-black {
    font-family: "Poppins", sans-serif;
    font-weight: 900;
    font-style: normal;
}

.poppins-thin-italic {
    font-family: "Poppins", sans-serif;
    font-weight: 100;
    font-style: italic;
}

.poppins-extralight-italic {
    font-family: "Poppins", sans-serif;
    font-weight: 200;
    font-style: italic;
}

.poppins-light-italic {
    font-family: "Poppins", sans-serif;
    font-weight: 300;
    font-style: italic;
}

.poppins-regular-italic {
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-style: italic;
}

.poppins-medium-italic {
    font-family: "Poppins", sans-serif;
    font-weight: 500;
    font-style: italic;
}

.poppins-semibold-italic {
    font-family: "Poppins", sans-serif;
    font-weight: 600;
    font-style: italic;
}

.poppins-bold-italic {
    font-family: "Poppins", sans-serif;
    font-weight: 700;
    font-style: italic;
}

.poppins-extrabold-italic {
    font-family: "Poppins", sans-serif;
    font-weight: 800;
    font-style: italic;
}

.poppins-black-italic {
    font-family: "Poppins", sans-serif;
    font-weight: 900;
    font-style: italic;
}

.gallery-grid {
    gap: 1em;
}

.gallery-section {
    width: 100%;
    padding: 0.5em;
    border: 4px solid var(--bg-accent-transparent);
    border-radius: 32px;
    user-select: none;
    will-change: transform;
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.gallery-link {
    width: min(100%, 380px);
    justify-self: center;
}

.gallery-link>.gallery-section {
    transition: transform 80ms ease-out;
}

.gallery-section>img {
    width: 100%;
    aspect-ratio: 2 / 1;
    object-fit: cover;
    border-radius: calc(32px - 0.5em);
    pointer-events: none;
}

.gallery-section>p {
    align-self: center;
    padding-bottom: 0.5em;
}

@media (min-width: 768px) and (max-width: 1023px) {
    .gallery-grid> :last-child:nth-child(odd) {
        grid-column: 1 / -1;
        justify-self: center;
    }
}

@media (max-width: 768px) {
    .gallery-section>img {
        aspect-ratio: 3 / 2;
    }
}

/* i deserve to be taken out back and shot */
@media (min-width: 1024px) {
    .gallery-grid {
        grid-template-columns: repeat(6, minmax(0, 1fr));
    }

    .gallery-grid>* {
        grid-column: span 2;
    }

    .gallery-grid> :last-child:nth-child(3n + 1) {
        grid-column: 3 / span 2;
    }

    .gallery-grid> :nth-last-child(2):nth-child(3n + 1) {
        grid-column: 2 / span 2;
    }

    .gallery-grid> :last-child:nth-child(3n + 2) {
        grid-column: 4 / span 2;
    }
}

